crates/toml_edit/tests/fixtures/invalid/empty-implicit-table.stderr
TOML parse error at line 1, column 10
  |
1 | [naughty..naughty]
  |          ^
Unexpected `.`
While parsing a Table Header
